# VaSP

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  script_params.config
.github/workflows/: build_docs.yml  check_and_test_package.yml  docker.yml
Scripts/: a_create_meshes.sh  b_domain_band_sd1.sh  b_domain_band_sd2.sh  c_compute_norms.sh  c_create_readable_h5.sh  d_compute_stress_wss.sh  d_compute_stress_wss_local.sh  e_compute_spectrograms_local.sh  f_compute_spi_local.sh  g_domain_band_strain.sh  p_paraview_post.sh  q_pyvista_post.sh
Scripts/config_files/: case9_cs100.config
Scripts_Desktop/: a_create_meshes.sh  b_h5py_postprocess_local.sh  c_fenics_postprocess_local.sh  d_spectral.sh  e_test_flow_rate.sh
Scripts_Desktop/config_files/: cyl_test.config
cyl_test/: problem_aneu.py  problem_aneu_johannes.py
data/models/offset_stenosis/: README.md  offset_stenosis.stl
docker/: Dockerfile
docs/: _config.yml  _toc.yml  aneurysm.md  api.rst  avf.md  cluster.md  conda.md  docker.md  features.md  index.md  installation.md  issues.md  offset_stenosis.md  postprocess.md  preprocess.md  prestress.md  references.bib  simulation.md  stenosis.md  tutorials.md
postprocessing_fenics/: compute_flow_rate_fsi.py  compute_norms.py  compute_readable_h5.py  compute_solid_stress.py  compute_wss_fsi.py  postprocessing_common.py  stress_strain.py
postprocessing_h5py/: PlotAneuAmplitude.py  PlotAneuContour.py  PlotAneuQ_hi_lo.py  Spectrogram.config  check_h5file.py  check_xdmf.py  combine_xdmf.py  compute_band_pass_magnitude.py  compute_domain_specific_viz.py  compute_hi_pass_magnitude.py  compute_spi.py  create_harmonic_concentration_index.py  create_mode_shapes.py  create_point_trace.py  create_spectrogram_from_components.py  create_spectrograms.py  create_spectrograms_chromagrams.py  create_visualizations.py  determine_modal_frequencies.py  determine_modal_frequencies_one_time.py  make_xdmf_from_logfile.py  merge_visualization_files.py  overlay_modes_on_spectrograms.py  plot_compute_time.py  postprocessing_common_h5py.py  postprocessing_common_h5py_with_95th.txt  postprocessing_common_pv.py  spectrograms.py  subtract_spectrograms.py  wss_region.py
postprocessing_mesh/: Create_Fluid_Only_Mesh.py  Create_Refined_Mesh.py  Create_Solid_Only_Mesh.py  common_meshing.py
preprocessing_mesh/: 1xml_to_stl.py  2end_cap_remove.py  3run_meshing.py  3run_meshing_new.py  4xml2h5_mesh.py  5xml2h5_switchInlet.py  PredeformFSIMesh.py  ViewDomains.py  automatedPreProcessing.py  common_meshing.py  predeform_mesh.py  vmtkentityrenumber.py  vmtkmeshgeneratorfsi.py
preprocessing_mesh/surfaces/: offset_stenosis.stl  stenosis.vtp
preprocessing_mesh/surfaces/case9_550k/: command.txt
preprocessing_mesh/surfaces/case9_600k/: command.txt
simulations/cyl_test/: ICA_values  problem_aneu.py  problem_aneu_resistance.py
simulations/stenosis_FC/: FC_MCA_10  offset_stenosis.config  pulsatile_vessel.py
simulations/stenosis_test/: MCA_10
src/fsipy/: __init__.py
src/vasp/: __init__.py
stenosis_FC/: FC_Pressure  offset_stenosis.config  pulsatile_vessel.py  pulsatile_vessel_cyl.py  run_aneu.sh
stenosis_FC/utils/: Womersley.py
stenosis_test/: offset_stenosis.config  p_t.csv  pulsatile_vessel.py  run_aneu.sh  test.sh
stenosis_test/mesh/: file_offset_stenosis.h5
tests/: test_compute_hemodynamics.py  test_create_hdf5.py  test_create_hdf5_and_separate_viz.py  test_log_plotter.py  test_postprocess_mesh.py  test_pre_processing.py  test_predeform.py  test_simulation_common.py  test_simulations.py
(+115 files in other folders)
