[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "vasp"
version = "0.1.0"
description = "Vascular Fluid Structure Interaction Pipline"
authors = [{name = "Kei Yamamoto", email = "keiya@simula.no"},
           {name = "Johannes Ring", email = "johannr@simula.no"},
           {name = "David A. Bruneau", email = "david.bruneau@mail.utoronto.ca"},
           {name = "Jørgen S. Dokken", email = "dokken@simula.no"}]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    'numpy',
    'matplotlib',
    'vampy@git+https://github.com/KVSlab/VaMPy',
]

[project.scripts]
vasp-generate-mesh = "vasp.automatedPreprocessing.automated_preprocessing:main_meshing"
vasp-generate-solid-probe = "vasp.automatedPreprocessing.generate_solid_probe:main"
vasp-predeform-mesh = "vasp.automatedPostprocessing.predeform_mesh:main"
vasp-refine-mesh = "vasp.automatedPostprocessing.postprocessing_mesh.create_refined_mesh:main"
vasp-separate-mesh = "vasp.automatedPostprocessing.postprocessing_mesh.separate_mesh:main"
vasp-log-plotter = "vasp.automatedPostprocessing.log_plotter:main"
vasp-create-hdf5 = "vasp.automatedPostprocessing.postprocessing_fenics.create_hdf5:main"
vasp-create-separate-domain-viz = "vasp.automatedPostprocessing.postprocessing_fenics.create_separate_domain_visualization:main"
vasp-compute-stress = "vasp.automatedPostprocessing.postprocessing_fenics.compute_stress_strain:main"
vasp-compute-hemo = "vasp.automatedPostprocessing.postprocessing_fenics.compute_hemodynamics:main"
vasp-create-spectrograms-chromagrams = "vasp.automatedPostprocessing.postprocessing_h5py.create_spectrograms_chromagrams:main"
vasp-create-spectrum = "vasp.automatedPostprocessing.postprocessing_h5py.create_spectrum:main"
vasp-create-hi-pass-viz = "vasp.automatedPostprocessing.postprocessing_h5py.create_hi_pass_viz:main"

[project.optional-dependencies]
test = [
    "flake8",
    'mypy',
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

docs = [
    "jupyter-book"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=./",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-v"
]
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/",
]
# Folder to check with mypy
files = [
    "src",
    "tests"
]
